Implemented 4 functioning methods for Army, and tests for them. Improved tests in armytest.